src/bootstrap/src/core/builder/selectors/snapshots/x_build.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: build
---
[Build] compile::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({build::library})
    - Set({build::library/alloc})
    - Set({build::library/compiler-builtins/compiler-builtins})
    - Set({build::library/core})
    - Set({build::library/panic_abort})
    - Set({build::library/panic_unwind})
    - Set({build::library/proc_macro})
    - Set({build::library/rustc-std-workspace-core})
    - Set({build::library/std})
    - Set({build::library/std_detect})
    - Set({build::library/sysroot})
    - Set({build::library/test})
    - Set({build::library/unwind})
[Build] tool::Rustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::src/librustdoc})
    - Set({build::src/tools/rustdoc})
