src/bootstrap/src/core/builder/selectors/snapshots/x_build_compiler.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: build compiler
---
[Build] compile::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::compiler/rustc_abi})
    - Set({build::compiler/rustc_arena})
    - Set({build::compiler/rustc_ast})
    - Set({build::compiler/rustc_ast_ir})
    - Set({build::compiler/rustc_ast_lowering})
    - Set({build::compiler/rustc_ast_passes})
    - Set({build::compiler/rustc_ast_pretty})
    - Set({build::compiler/rustc_attr_parsing})
    - Set({build::compiler/rustc_baked_icu_data})
    - Set({build::compiler/rustc_borrowck})
    - Set({build::compiler/rustc_builtin_macros})
    - Set({build::compiler/rustc_codegen_llvm})
    - Set({build::compiler/rustc_codegen_ssa})
    - Set({build::compiler/rustc_const_eval})
    - Set({build::compiler/rustc_data_structures})
    - Set({build::compiler/rustc_driver})
    - Set({build::compiler/rustc_driver_impl})
    - Set({build::compiler/rustc_error_codes})
    - Set({build::compiler/rustc_error_messages})
    - Set({build::compiler/rustc_errors})
    - Set({build::compiler/rustc_expand})
    - Set({build::compiler/rustc_feature})
    - Set({build::compiler/rustc_fluent_macro})
    - Set({build::compiler/rustc_fs_util})
    - Set({build::compiler/rustc_graphviz})
    - Set({build::compiler/rustc_hashes})
    - Set({build::compiler/rustc_hir})
    - Set({build::compiler/rustc_hir_analysis})
    - Set({build::compiler/rustc_hir_id})
    - Set({build::compiler/rustc_hir_pretty})
    - Set({build::compiler/rustc_hir_typeck})
    - Set({build::compiler/rustc_incremental})
    - Set({build::compiler/rustc_index})
    - Set({build::compiler/rustc_index_macros})
    - Set({build::compiler/rustc_infer})
    - Set({build::compiler/rustc_interface})
    - Set({build::compiler/rustc_lexer})
    - Set({build::compiler/rustc_lint})
    - Set({build::compiler/rustc_lint_defs})
    - Set({build::compiler/rustc_llvm})
    - Set({build::compiler/rustc_log})
    - Set({build::compiler/rustc_macros})
    - Set({build::compiler/rustc_metadata})
    - Set({build::compiler/rustc_middle})
    - Set({build::compiler/rustc_mir_build})
    - Set({build::compiler/rustc_mir_dataflow})
    - Set({build::compiler/rustc_mir_transform})
    - Set({build::compiler/rustc_monomorphize})
    - Set({build::compiler/rustc_next_trait_solver})
    - Set({build::compiler/rustc_parse})
    - Set({build::compiler/rustc_parse_format})
    - Set({build::compiler/rustc_passes})
    - Set({build::compiler/rustc_pattern_analysis})
    - Set({build::compiler/rustc_privacy})
    - Set({build::compiler/rustc_proc_macro})
    - Set({build::compiler/rustc_public})
    - Set({build::compiler/rustc_public_bridge})
    - Set({build::compiler/rustc_query_impl})
    - Set({build::compiler/rustc_query_system})
    - Set({build::compiler/rustc_resolve})
    - Set({build::compiler/rustc_sanitizers})
    - Set({build::compiler/rustc_serialize})
    - Set({build::compiler/rustc_session})
    - Set({build::compiler/rustc_span})
    - Set({build::compiler/rustc_symbol_mangling})
    - Set({build::compiler/rustc_target})
    - Set({build::compiler/rustc_thread_pool})
    - Set({build::compiler/rustc_trait_selection})
    - Set({build::compiler/rustc_traits})
    - Set({build::compiler/rustc_transmute})
    - Set({build::compiler/rustc_ty_utils})
    - Set({build::compiler/rustc_type_ir})
    - Set({build::compiler/rustc_type_ir_macros})
    - Set({build::compiler/rustc_windows_rc})
[Build] compile::Assemble
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::compiler})
    - Set({build::compiler/rustc})
