src/bootstrap/src/core/builder/selectors/snapshots/x_build_compiletest.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: build compiletest
---
[Build] tool::Compiletest
    targets: [aarch64-unknown-linux-gnu]
    - Set({build::src/tools/compiletest})
