src/bootstrap/src/core/builder/selectors/snapshots/x_build_llvm.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: build llvm
---
[Build] llvm::Llvm
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::src/llvm-project/llvm})
