src/bootstrap/src/core/builder/selectors/snapshots/x_build_rustc.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: build rustc
---
[Build] compile::Assemble
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::compiler/rustc})
