src/bootstrap/src/core/builder/selectors/snapshots/x_build_rustc_llvm.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: build rustc_llvm
---
[Build] compile::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::compiler/rustc_llvm})
