src/bootstrap/src/core/builder/selectors/snapshots/x_build_rustdoc.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: build rustdoc
---
[Build] tool::Rustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::src/tools/rustdoc})
