src/bootstrap/src/core/builder/selectors/snapshots/x_build_sysroot.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: build sysroot
---
[Build] compile::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({build::library/sysroot})
