src/bootstrap/src/core/builder/selectors/snapshots/x_check.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: check
---
[Check] check::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::compiler})
    - Set({check::compiler/rustc})
    - Set({check::compiler/rustc_abi})
    - Set({check::compiler/rustc_arena})
    - Set({check::compiler/rustc_ast})
    - Set({check::compiler/rustc_ast_ir})
    - Set({check::compiler/rustc_ast_lowering})
    - Set({check::compiler/rustc_ast_passes})
    - Set({check::compiler/rustc_ast_pretty})
    - Set({check::compiler/rustc_attr_parsing})
    - Set({check::compiler/rustc_baked_icu_data})
    - Set({check::compiler/rustc_borrowck})
    - Set({check::compiler/rustc_builtin_macros})
    - Set({check::compiler/rustc_codegen_llvm})
    - Set({check::compiler/rustc_codegen_ssa})
    - Set({check::compiler/rustc_const_eval})
    - Set({check::compiler/rustc_data_structures})
    - Set({check::compiler/rustc_driver})
    - Set({check::compiler/rustc_driver_impl})
    - Set({check::compiler/rustc_error_codes})
    - Set({check::compiler/rustc_error_messages})
    - Set({check::compiler/rustc_errors})
    - Set({check::compiler/rustc_expand})
    - Set({check::compiler/rustc_feature})
    - Set({check::compiler/rustc_fluent_macro})
    - Set({check::compiler/rustc_fs_util})
    - Set({check::compiler/rustc_graphviz})
    - Set({check::compiler/rustc_hashes})
    - Set({check::compiler/rustc_hir})
    - Set({check::compiler/rustc_hir_analysis})
    - Set({check::compiler/rustc_hir_id})
    - Set({check::compiler/rustc_hir_pretty})
    - Set({check::compiler/rustc_hir_typeck})
    - Set({check::compiler/rustc_incremental})
    - Set({check::compiler/rustc_index})
    - Set({check::compiler/rustc_index_macros})
    - Set({check::compiler/rustc_infer})
    - Set({check::compiler/rustc_interface})
    - Set({check::compiler/rustc_lexer})
    - Set({check::compiler/rustc_lint})
    - Set({check::compiler/rustc_lint_defs})
    - Set({check::compiler/rustc_llvm})
    - Set({check::compiler/rustc_log})
    - Set({check::compiler/rustc_macros})
    - Set({check::compiler/rustc_metadata})
    - Set({check::compiler/rustc_middle})
    - Set({check::compiler/rustc_mir_build})
    - Set({check::compiler/rustc_mir_dataflow})
    - Set({check::compiler/rustc_mir_transform})
    - Set({check::compiler/rustc_monomorphize})
    - Set({check::compiler/rustc_next_trait_solver})
    - Set({check::compiler/rustc_parse})
    - Set({check::compiler/rustc_parse_format})
    - Set({check::compiler/rustc_passes})
    - Set({check::compiler/rustc_pattern_analysis})
    - Set({check::compiler/rustc_privacy})
    - Set({check::compiler/rustc_proc_macro})
    - Set({check::compiler/rustc_public})
    - Set({check::compiler/rustc_public_bridge})
    - Set({check::compiler/rustc_query_impl})
    - Set({check::compiler/rustc_query_system})
    - Set({check::compiler/rustc_resolve})
    - Set({check::compiler/rustc_sanitizers})
    - Set({check::compiler/rustc_serialize})
    - Set({check::compiler/rustc_session})
    - Set({check::compiler/rustc_span})
    - Set({check::compiler/rustc_symbol_mangling})
    - Set({check::compiler/rustc_target})
    - Set({check::compiler/rustc_thread_pool})
    - Set({check::compiler/rustc_trait_selection})
    - Set({check::compiler/rustc_traits})
    - Set({check::compiler/rustc_transmute})
    - Set({check::compiler/rustc_ty_utils})
    - Set({check::compiler/rustc_type_ir})
    - Set({check::compiler/rustc_type_ir_macros})
    - Set({check::compiler/rustc_windows_rc})
[Check] check::Rustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::src/librustdoc, check::src/tools/rustdoc})
[Check] check::CraneliftCodegenBackend
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::cg_clif})
    - Set({check::rustc_codegen_cranelift})
[Check] check::GccCodegenBackend
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::cg_gcc})
    - Set({check::rustc_codegen_gcc})
[Check] check::Clippy
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::src/tools/clippy})
[Check] check::Miri
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::src/tools/miri})
[Check] check::CargoMiri
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::src/tools/miri/cargo-miri})
[Check] check::MiroptTestTools
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::src/tools/miropt-test-tools})
[Check] check::Rustfmt
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::src/tools/rustfmt})
[Check] check::RustAnalyzer
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::src/tools/rust-analyzer})
[Check] check::TestFloatParse
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::src/tools/test-float-parse})
[Check] check::FeaturesStatusDump
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::src/tools/features-status-dump})
[Check] check::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({check::library})
    - Set({check::library/alloc})
    - Set({check::library/alloctests})
    - Set({check::library/compiler-builtins/compiler-builtins})
    - Set({check::library/core})
    - Set({check::library/coretests})
    - Set({check::library/panic_abort})
    - Set({check::library/panic_unwind})
    - Set({check::library/proc_macro})
    - Set({check::library/rustc-std-workspace-core})
    - Set({check::library/std})
    - Set({check::library/std_detect})
    - Set({check::library/sysroot})
    - Set({check::library/test})
    - Set({check::library/unwind})
