src/bootstrap/src/core/builder/selectors/snapshots/x_check_bootstrap.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: check bootstrap
---
[Check] check::Bootstrap
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::src/bootstrap})
